syntax = "proto3";
package avelio.upload;

import "proto/general.proto";

message SearchByNameRequest { string title = 1; }

message SearchByNameResponse {
  avelio.general.Song song = 1;
  optional string youtube_url = 2;
}

message SaveMusicRequest {
  string file_id = 1;
  avelio.general.Song song = 2;
}

message SaveMusicResponse { string id = 1; }

message UploadYoutubeRequest { string youtube_url = 1; }

message UploadFileResponse { string id = 1; }
